# SalomeGuiModuleDemo

./: CMakeLists.txt  MyDemoGui.cxx  MyDemoGui.hxx
resources/: CMakeLists.txt  MYDEMOCatalog.xml  OPENTURNS_images.ts  OPENTURNS_msg_en.ts  OPENTURNS_msg_zh_CN.ts  SalomeApp.xml
